--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "includedScripts": []
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "next": "~15.1.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "^2.1.1",
-    "@eslint/js": "^9.8.0",
     "@nx/cypress": "20.4.6",
     "@nx/eslint": "20.4.6",
     "@nx/eslint-plugin": "20.4.6",
@@ -39,7 +42,7 @@
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "cypress": "^13.13.0",
-    "eslint": "^9.8.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.16",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
