--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nx dev",
-    "build": "nx build",
+    "build": "next build",
     "start": "nx start",
     "test": "nx test"
   },
@@ -21,7 +21,8 @@
     "embla-carousel-react": "^8.5.2",
     "next": "~15.1.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.4.3"
   },
   "devDependencies": {
     "@nx/cypress": "20.4.6",
@@ -55,7 +56,6 @@
     "nx": "20.4.6",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
-    "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
